--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -6,6 +6,7 @@
     text-align: left;
     font-size: 54px;
     line-height: 58px;
+    max-width: 690px;
 }
 
 @media screen and (max-width: 767px) {
